--- a/scratches/bitcoin_price_analysis_kaggle/03_bitcoint_price.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/03_bitcoint_price.ipynb
@@ -225,7 +225,7 @@
    ],
    "source": [
     "fig, ax1 = plt.subplots(figsize=(20,10))\n",
-    "ax1.set_title('BTC evolution compared to Tweets Sentiment', fontsize=18)\n",
+    "ax1.set_title('BTC evolution compared to Tweets Polarization', fontsize=18)\n",
     "ax1.tick_params(labelsize=14)\n",
     "ax2 = ax1.twinx()\n",
     "ax1.plot(tweets_grouped, 'g-')\n",
@@ -234,7 +234,9 @@
     "\n",
     "ax1.set_ylabel('Sentiment', fontsize=16)\n",
     "ax2.set_ylabel('Bitcoin', fontsize=16)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Meter leyenda!"
    ],
    "metadata": {
     "collapsed": false,
@@ -360,6 +362,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Normalization"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
