--- a/scratches/bitcoin_price_analysis_kaggle/01_tweets_cleaning.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/01_tweets_cleaning.ipynb
@@ -85,6 +85,8 @@
    "source": [
     "# clean tweets\n",
     "tweets = tweets.sort_values(by = 'date')\n",
+    "\n",
+    "# Select a 1% random sample of all tweets\n",
     "dd = tweets.sample(frac=0.01,\n",
     "                   replace=False,\n",
     "                   random_state=1234)\n",
