--- a/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
@@ -113,6 +113,8 @@
    ],
    "source": [
     "analyzer = SentimentIntensityAnalyzer()\n",
+    "# Compound is the score given to the intensity of sentiment detected in tweets\n",
+    "\n",
     "compound = []\n",
     "\n",
     "for i, s in enumerate(tqdm(tweets['text'],\n",
@@ -168,8 +170,9 @@
     "                 leave=True):\n",
     "\n",
     "    try:\n",
-    "        scores.append(s[\"compound\"] * ((int(s[\"user_followers\"]))) * ((int(s[\"user_favourites\"])+1)/int(s['user_followers']+1)) *((int(s[\"is_retweet\"])+1)))\n",
-    "\n",
+    "    # Scores are calculated using the relevance of the tweeter poster\n",
+    "        scores.append(s[\"compound\"] * (int(s[\"user_followers\"])) * ((int(s[\"user_favourites\"])+1) / int(s['user_followers']+1)) * \\\n",
+    "                      (int(s[\"is_retweet\"])+1))\n",
     "    except:\n",
     "        scores.append(np.nan)\n",
     "\n",
