--- a/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
@@ -188,7 +188,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Save to local"
+    "### Save to local:"
    ],
    "metadata": {
     "collapsed": false,
