--- a/scratches/bitcoin_price_analysis_kaggle/04_NLP_Modelling.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/04_NLP_Modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -138,7 +138,6 @@
     "    tweet_without_url = re.sub(r'http\\S+',' ', data)\n",
     "    tweet_without_hashtag = re.sub(r'#\\w+', ' ', tweet_without_url)\n",
     "    tweet_without_mentions = re.sub(r'@\\w+',' ', tweet_without_hashtag)\n",
-    "\n",
     "    precleaned_tweet = re.sub('[^A-Za-z]+', ' ', tweet_without_mentions)\n",
     "\n",
     "    # Tokenization\n",
@@ -201,7 +200,7 @@
     }
    ],
    "source": [
-    "df['cleaned_tweets'] = df['tweets'].apply(cleaning)\n",
+    "df['cleaned_tweets'] = df['tweets'].apply(lambda x: cleaning(x))\n",
     "df['date'] = df_clean['date']\n",
     "df['date_clean'] = pd.to_datetime(df['date']).dt.strftime('%Y-%m-%d')\n",
     "df.drop(columns='date',inplace=True)\n",
