--- a/scratches/bitcoin_price_analysis_kaggle/01_tweets_cleaning.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/01_tweets_cleaning.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -63,11 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "tweets_fn = 'bitcoin_tweets.csv'\n",
-    "bitcoin_price_fn = 'BTC-USD.csv'"
+    "directory = '~/PycharmProjects/tfm_hugopobil'\n",
+    "tweets_fn = f'{directory}/data/bitcoin_tweets.csv'\n",
+    "bitcoin_price_fn = f'{directory}/dataBTC-USD.csv'"
    ],
    "metadata": {
     "collapsed": false,
