--- a/scratches/bitcoin_price_analysis_kaggle/03_bitcoint_price.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/03_bitcoint_price.ipynb
@@ -46,7 +46,8 @@
     }
    ],
    "source": [
-    "btc = pd.read_csv('BTC-USD.csv', low_memory=False)\n",
+    "directory = '~/PycharmProjects/tfm_hugopobil'\n",
+    "btc = pd.read_csv(f'{directory}/data/BTC-USD.csv', low_memory=False)\n",
     "btc.head()"
    ],
    "metadata": {
@@ -61,7 +62,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "tweets = pd.read_csv('tweets_scores.csv', low_memory=False)"
+    "tweets = pd.read_csv(f'{directory}data/tweets_scores.csv', low_memory=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -265,8 +266,8 @@
    "execution_count": 45,
    "outputs": [],
    "source": [
-    "tweets_grouped.to_csv('tweets_grouped.csv')\n",
-    "btc_usd_grouped.to_csv('btc_usd_grouped.csv')"
+    "tweets_grouped.to_csv(f'{directory}/data/tweets_grouped.csv')\n",
+    "btc_usd_grouped.to_csv(f'{directory}/data/btc_usd_grouped.csv')"
    ],
    "metadata": {
     "collapsed": false,
