--- a/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
@@ -49,7 +49,8 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "tweets = pd.read_csv('tweets_clean.csv', low_memory=False)"
+    "directory = '~/PycharmProjects/tfm_hugopobil'\n",
+    "tweets = pd.read_csv(f'{directory}/data/tweets_clean.csv', low_memory=False)"
    ],
    "metadata": {
     "collapsed": false,
