two new notebooks including NLP data preparation and correlation initial exploration on Bitcoin and Tweets Intensity Analyzer

--- a/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/02_sentiment_analysis_polarity.ipynb
@@ -172,8 +172,7 @@
     "\n",
     "    try:\n",
     "    # Scores are calculated using the relevance of the tweeter poster\n",
-    "        scores.append(s[\"compound\"] * (int(s[\"user_followers\"])) * ((int(s[\"user_favourites\"])+1) / int(s['user_followers']+1)) * \\\n",
-    "                      (int(s[\"is_retweet\"])+1))\n",
+    "        scores.append(s[\"compound\"] * (int(s[\"user_followers\"])) * ((int(s[\"user_favourites\"])+1)))\n",
     "    except:\n",
     "        scores.append(np.nan)\n",
     "\n",
