bow for nlp processed tweets

--- a/scratches/bitcoin_price_analysis_kaggle/01_tweets_cleaning.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/01_tweets_cleaning.ipynb
@@ -162,9 +162,7 @@
     "tweets = tweets.sort_values(by = 'date')\n",
     "\n",
     "# Select a 1% random sample of all tweets\n",
-    "dd = tweets.sample(frac=0.01,\n",
-    "                   replace=False,\n",
-    "                   random_state=1234)\n",
+    "dd = tweets.sample(frac=0.01, replace=False, random_state=1234)\n",
     "\n",
     "dd.reset_index(inplace=True)\n",
     "\n",
@@ -175,10 +173,7 @@
     "    text = re.sub('@\\\\w+ *', '', text, flags=re.MULTILINE)\n",
     "    dd.loc[i, 'text'] = text\n",
     "\n",
-    "    dd.to_csv('tweets_clean.csv',\n",
-    "              header=True,\n",
-    "              encoding='utf-8',\n",
-    "              index=False)"
+    "dd.to_csv('tweets_clean.csv', header=True, encoding='utf-8', index=False)"
    ],
    "metadata": {
     "collapsed": false,
