--- a/scratches/bitcoin_price_analysis_kaggle/03_bitcoint_price.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/03_bitcoint_price.ipynb
@@ -139,7 +139,31 @@
    "execution_count": 13,
    "outputs": [],
    "source": [
-    "tweets_grouped = tweets.resample('1D').sum()"
+    "tweets_grouped = tweets.resample('1h').sum() # Change frequency to days or hours"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "            Unnamed: 0   index  user_followers  user_friends  user_favourites  \\\ndate                                                                            \n2021-02-05      220882  414223         33470.0       16426.0         123851.0   \n2021-02-06      392928  648736         95447.0       42256.0         243022.0   \n2021-02-07      251410  352358         52398.0       12198.0         145664.0   \n2021-02-08      732512  670378        380316.0       84483.0        1119673.0   \n2021-02-09      392503  210986         94894.0       24087.0         223149.0   \n...                ...     ...             ...           ...              ...   \n2022-01-24           0       0             0.0           0.0              0.0   \n2022-01-25           0       0             0.0           0.0              0.0   \n2022-01-26           0       0             0.0           0.0              0.0   \n2022-01-27           0       0             0.0           0.0              0.0   \n2022-01-28           0       0             0.0           0.0              0.0   \n\n            user_verified  compound          score  normalized_score  \ndate                                                                  \n2021-02-05              0    0.5253   35498.370292         -0.244415  \n2021-02-06              0    4.9306   56743.460525         -0.130687  \n2021-02-07              1    3.8734   42357.506407         -0.207697  \n2021-02-08              1    5.5275  109290.201993          0.150601  \n2021-02-09              0    7.4220   66623.570932         -0.077798  \n...                   ...       ...            ...               ...  \n2022-01-24              0    0.0000       0.000000         -0.434441  \n2022-01-25              0    0.0000       0.000000         -0.434441  \n2022-01-26              0    0.0000       0.000000         -0.434441  \n2022-01-27              0    0.0000       0.000000         -0.434441  \n2022-01-28              0    0.0000       0.000000         -0.434441  \n\n[358 rows x 9 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>index</th>\n      <th>user_followers</th>\n      <th>user_friends</th>\n      <th>user_favourites</th>\n      <th>user_verified</th>\n      <th>compound</th>\n      <th>score</th>\n      <th>normalized_score</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-02-05</th>\n      <td>220882</td>\n      <td>414223</td>\n      <td>33470.0</td>\n      <td>16426.0</td>\n      <td>123851.0</td>\n      <td>0</td>\n      <td>0.5253</td>\n      <td>35498.370292</td>\n      <td>-0.244415</td>\n    </tr>\n    <tr>\n      <th>2021-02-06</th>\n      <td>392928</td>\n      <td>648736</td>\n      <td>95447.0</td>\n      <td>42256.0</td>\n      <td>243022.0</td>\n      <td>0</td>\n      <td>4.9306</td>\n      <td>56743.460525</td>\n      <td>-0.130687</td>\n    </tr>\n    <tr>\n      <th>2021-02-07</th>\n      <td>251410</td>\n      <td>352358</td>\n      <td>52398.0</td>\n      <td>12198.0</td>\n      <td>145664.0</td>\n      <td>1</td>\n      <td>3.8734</td>\n      <td>42357.506407</td>\n      <td>-0.207697</td>\n    </tr>\n    <tr>\n      <th>2021-02-08</th>\n      <td>732512</td>\n      <td>670378</td>\n      <td>380316.0</td>\n      <td>84483.0</td>\n      <td>1119673.0</td>\n      <td>1</td>\n      <td>5.5275</td>\n      <td>109290.201993</td>\n      <td>0.150601</td>\n    </tr>\n    <tr>\n      <th>2021-02-09</th>\n      <td>392503</td>\n      <td>210986</td>\n      <td>94894.0</td>\n      <td>24087.0</td>\n      <td>223149.0</td>\n      <td>0</td>\n      <td>7.4220</td>\n      <td>66623.570932</td>\n      <td>-0.077798</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2022-01-24</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0000</td>\n      <td>0.000000</td>\n      <td>-0.434441</td>\n    </tr>\n    <tr>\n      <th>2022-01-25</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0000</td>\n      <td>0.000000</td>\n      <td>-0.434441</td>\n    </tr>\n    <tr>\n      <th>2022-01-26</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0000</td>\n      <td>0.000000</td>\n      <td>-0.434441</td>\n    </tr>\n    <tr>\n      <th>2022-01-27</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0000</td>\n      <td>0.000000</td>\n      <td>-0.434441</td>\n    </tr>\n    <tr>\n      <th>2022-01-28</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>0.0000</td>\n      <td>0.000000</td>\n      <td>-0.434441</td>\n    </tr>\n  </tbody>\n</table>\n<p>358 rows × 9 columns</p>\n</div>"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweets_grouped"
    ],
    "metadata": {
     "collapsed": false,
