--- a/scratches/bitcoin_price_analysis_kaggle/06_tweets_bow.ipynb
+++ b/scratches/bitcoin_price_analysis_kaggle/06_tweets_bow.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import stanza\n",
+    "# import stanza\n",
     "from text_mining.text_processing.text2bow import Text2BowTransformerPhrases\n",
     "from text_mining.text_processing.tokenizer import Tokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "directory = '~/PycharmProjects/tfm_hugopobil'\n",
@@ -33,10 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "stanza.download('en')"
+    "# stanza.download('en')"
    ],
    "metadata": {
     "collapsed": false,
@@ -47,39 +47,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
-   "source": [
-    "def head_body2bow(df, language='en'):\n",
-    "    X = df['cleaned_tweets']\n",
-    "    tokenizer = Tokenizer(tokenizer_model='stanza', language=language)\n",
-    "    text2bow = Text2BowTransformerPhrases(tokenizer=tokenizer, form_phrases=False)\n",
-    "\n",
-    "    print('Starting bow creation')\n",
-    "\n",
-    "    corpus_bow = text2bow.fit_transform(X)\n",
-    "    df['bow'] = corpus_bow\n",
-    "\n",
-    "    print('End bow creation')\n",
-    "\n",
-    "    return df"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n",
+      "800\n",
+      "900\n",
+      "1000\n",
+      "1100\n",
+      "1200\n",
+      "1300\n",
+      "1400\n",
+      "1500\n",
+      "1600\n",
+      "1700\n",
+      "1800\n",
+      "1900\n",
+      "2000\n",
+      "2100\n",
+      "2200\n",
+      "2300\n",
+      "2400\n",
+      "2500\n",
+      "2600\n",
+      "2700\n",
+      "2800\n",
+      "2900\n",
+      "3000\n",
+      "3100\n",
+      "3200\n",
+      "3300\n",
+      "3400\n",
+      "3500\n",
+      "3600\n",
+      "3700\n",
+      "3800\n",
+      "3900\n",
+      "4000\n",
+      "4100\n",
+      "4200\n",
+      "4300\n",
+      "4400\n",
+      "4500\n",
+      "4600\n",
+      "4700\n"
      ]
     }
    ],
@@ -91,58 +111,39 @@
     "count = 0\n",
     "\n",
     "for ind, row in df.iterrows():\n",
-    "    results.append(text2bow.fit_transform(row.cleaned_tweets))\n",
+    "    results.append(text2bow.fit_transform(str(row.cleaned_tweets)))\n",
     "    count +=1\n",
-    "    if count % 10 == 0:\n",
+    "    if count % 100 == 0:\n",
     "        print(count)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/79/vrkgvtgs11v73pnty27_x1100000gn/T/ipykernel_76027/1733204128.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['bow'] = results\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "                                                       tweets  \\\ndate_clean                                                      \n2021-10-28  Airdrop is live , dont be late sir :)\\n\\n\\n\\n\\...   \n2021-10-22  something Big is coming \\n$KLV Klever 💜🌟\\n\\nBT...   \n2021-08-16  Easy money with \\n\\n bsc bnb BinanceSmartChain...   \n2021-10-19  NanoDogecoin is the King👑of the BSC Blockchain...   \n2021-12-30  Bitcoin News Roundup for June 17, 2020 cryptoc...   \n\n                                               cleaned_tweets  \\\ndate_clean                                                      \n2021-10-28  Airdrop live dont late sir Airdrop Airdrops Ai...   \n2021-10-22  something Big coming KLV Klever BTC ETH BNB TR...   \n2021-08-16  Easy money bsc bnb BinanceSmartChain binance g...   \n2021-10-19  NanoDogecoin King BSC Blockchain DeFi altcoins...   \n2021-12-30  Bitcoin News Roundup June cryptocurrencies bit...   \n\n           crypto_sentiment  subjectivity  polarity sentiment  target  \\\ndate_clean                                                              \n2021-10-28         negative      0.550000 -0.081818  negative    True   \n2021-10-22         negative      0.100000  0.000000  positive   False   \n2021-08-16         negative      0.833333  0.433333   neutral   False   \n2021-10-19         negative      0.733333  0.433333   neutral   False   \n2021-12-30         positive      0.000000  0.000000  positive    True   \n\n                                                          bow  \ndate_clean                                                     \n2021-10-28  [[], [], [], [], [], [], [], [], [], [], [], [...  \n2021-10-22  [[], [], [], [], [], [], [], [], [], [], [], [...  \n2021-08-16  [[], [], [], [], [], [], [], [], [], [], [], [...  \n2021-10-19  [[(0, 1)], [], [(0, 1)], [(1, 1)], [], [(1, 1)...  \n2021-12-30  [[], [], [], [], [], [], [], [], [], [], [], [...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>tweets</th>\n      <th>cleaned_tweets</th>\n      <th>crypto_sentiment</th>\n      <th>subjectivity</th>\n      <th>polarity</th>\n      <th>sentiment</th>\n      <th>target</th>\n      <th>bow</th>\n    </tr>\n    <tr>\n      <th>date_clean</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2021-10-28</th>\n      <td>Airdrop is live , dont be late sir :)\\n\\n\\n\\n\\...</td>\n      <td>Airdrop live dont late sir Airdrop Airdrops Ai...</td>\n      <td>negative</td>\n      <td>0.550000</td>\n      <td>-0.081818</td>\n      <td>negative</td>\n      <td>True</td>\n      <td>[[], [], [], [], [], [], [], [], [], [], [], [...</td>\n    </tr>\n    <tr>\n      <th>2021-10-22</th>\n      <td>something Big is coming \\n$KLV Klever 💜🌟\\n\\nBT...</td>\n      <td>something Big coming KLV Klever BTC ETH BNB TR...</td>\n      <td>negative</td>\n      <td>0.100000</td>\n      <td>0.000000</td>\n      <td>positive</td>\n      <td>False</td>\n      <td>[[], [], [], [], [], [], [], [], [], [], [], [...</td>\n    </tr>\n    <tr>\n      <th>2021-08-16</th>\n      <td>Easy money with \\n\\n bsc bnb BinanceSmartChain...</td>\n      <td>Easy money bsc bnb BinanceSmartChain binance g...</td>\n      <td>negative</td>\n      <td>0.833333</td>\n      <td>0.433333</td>\n      <td>neutral</td>\n      <td>False</td>\n      <td>[[], [], [], [], [], [], [], [], [], [], [], [...</td>\n    </tr>\n    <tr>\n      <th>2021-10-19</th>\n      <td>NanoDogecoin is the King👑of the BSC Blockchain...</td>\n      <td>NanoDogecoin King BSC Blockchain DeFi altcoins...</td>\n      <td>negative</td>\n      <td>0.733333</td>\n      <td>0.433333</td>\n      <td>neutral</td>\n      <td>False</td>\n      <td>[[(0, 1)], [], [(0, 1)], [(1, 1)], [], [(1, 1)...</td>\n    </tr>\n    <tr>\n      <th>2021-12-30</th>\n      <td>Bitcoin News Roundup for June 17, 2020 cryptoc...</td>\n      <td>Bitcoin News Roundup June cryptocurrencies bit...</td>\n      <td>positive</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>positive</td>\n      <td>True</td>\n      <td>[[], [], [], [], [], [], [], [], [], [], [], [...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "df['bow'] = results\n",
+    "print(df.shape)\n",
     "df.head()"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "df.to_csv(f'{directory}/data/tweets_nlp_bow.csv')"
@@ -150,7 +151,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
